--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,12 +39,22 @@
   },
   "description": "Website for Future Ace Technica Institute",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "keywords": [
     "React",
     "Education",
     "Javascript"
   ],
   "author": "Prashubh Atri",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PrashubhAtri/FWATI.git"
+  },
+  "bugs": {
+    "url": "https://github.com/PrashubhAtri/FWATI/issues"
+  },
+  "homepage": "https://github.com/PrashubhAtri/FWATI"
 }
