--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build && echo '/* /index.html 200' | cat >build/_redirects",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,7 +37,6 @@
   },
   "description": "Website for Future Ace Technica Institute",
   "main": "index.js",
-  "devDependencies": {},
   "keywords": [
     "React",
     "Education",
